--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-jest": "^27.1.3",
     "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.31.10"
+    "eslint-plugin-react": "^7.31.10",
+    "sass": "^1.56.0"
   }
 }
