More progress on My Listings - sorted by creation date, only show owned listings, style changes

--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,4 +1,5 @@
 {
   "BACKEND_PORT": 5005,
-  "LS_ACCESS_TOKEN": "airbrbAccessToken"
+  "LS_ACCESS_TOKEN": "airbrbAccessToken",
+  "LS_EMAIL": "airbrbEmail"
 }
