--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.6.0",
+    "react-player": "^2.11.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
